[package]
name = "toolcage"
version = "0.1.0"
edition = "2021"
description = "Per-tool-call WASM sandbox for MCP servers: every tools/call runs in a fresh wasmtime instance with only the filesystem that tool's policy grants."
license = "MIT"
repository = "https://github.com/bharat3645/toolcage"
keywords = ["mcp", "sandbox", "wasm", "wasmtime", "security"]
categories = ["command-line-utilities"]

[dependencies]
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
wasmtime = "24"
wasmtime-wasi = "24"
